resources/js/components/Posts/HomeView/style.scss
@import '../../../../sass/variables';


$font-size: 0.8em;


.posts-wrapper {
    margin-bottom: 0;
    padding: 24px 0 0 !important;

    .col {
        padding: 0;
    }

    .home-posts {
        padding: 0;
    }

    .home-posts .card {
        position: relative;
        border-top: 0.5px solid rgba(var(--ce3,239,239,239),1);
        margin-bottom: 9px;

        @include border-radius-top('left', 255px 15px);
        @include border-radius-top('right', 15px 255px);
        @include border-radius-bottom('left', 15px 255px);
        @include border-radius-bottom('right', 255px 15px);

        .card-header {
            height: 60px;
            padding: 0;
            background: #FFF;

            @include border-radius-top('left', 255px 15px);        
            @include border-radius-top('right', 15px 255px);        
            border: 0.5px solid rgba(var(--ce3,239,239,239),1);

            label {
                cursor: pointer;
            }

            .row {
                height: 42px;
                margin: 9px 0;

                &.post-info {
                    a {
                        color: #41403E;
                    }
                }
            }

            div.user-dp, div.user-opt {
                width: 42px;
                margin: 0 auto;

                img {
                    width: 32px;
                    height: 32px;

                    @include border-radius(100%);
                }
            }

            div.user-name, div.user-opt {
                margin-top: 9px;
                font-size: $font-size;
                font-weight: bold;
            }
        }

        .card-body {
            padding: 0;
            background: #FFF;

            border: 1px solid rgba(var(--ce3,239,239,239),1);
            @include border-radius-bottom('left', 15px 255px);        
            @include border-radius-bottom('right', 255px 15px);        

            a {
                margin-left: 0 !important;
            }

            div.likes {
                font-size: $font-size;
                padding: 0 16px;
            }

            .post-action {
                margin: 4px 0 0;
                padding: 0 16px;

                .col {
                    height: 42px;
                }

                button {
                    padding: 6px;
                    border: none;
                    width: 40px;
                    height: 40px;
                    box-shadow: none;
                    &:active {
                        border: none;
                    }
                }
            }

            .post-comments {
                margin: 4px 0 0;
                padding: 0 16px;

                .comment {
                    font-size: $font-size;

                    span.user a {
                        color: #262626;
                        font-weight: bold;
                    }

                    span.msg {
                        a {
                            color: #07439D;
                            cursor: pointer;
                        }
                    }
                }

                div.more {
                    margin: 4px 0;
                    font-size: $font-size;
                    a, a:visited { color: #868E96; }
                }

                + .add-comment {
                    margin: 4px 0;
                    border-top: 1px solid rgba(var(--ce3,239,239,239),1);

                    input {
                        margin: 0;
                        width: 100%;
                        font-size: $font-size;
                        border: none;
                    }

                    button.post {
                        border: none;
                        color: #64A3CC;
                        padding: 5.9px;
                        box-shadow: none;

                        &[disabled] {
                            cursor: pointer !important;
                        }
                    }
                }
            }

            p { margin: 0; }
        }

        .card-post {
            img {
                min-width: 100%;
            }

            @keyframes reveal {
                from {
                    width: 30px;
                    height: 30px;
                }
                to {
                    width: 90px;
                    height: 90px;
                }
            }

            .doubletap-icon {
                z-index: 1000;
                position: absolute;
                left: 50%;
                top: calc(50% - 45px);
                transform: translate(-50%, -50%);

                svg {
                    width: 90px;
                    height: 90px;
                    -webkit-filter: drop-shadow( 1px 1px 0.5px rgba(0, 0, 0, .3));
                    filter: drop-shadow( 1px 1px 0.5px rgba(0, 0, 0, .3));
                    animation-name: reveal;
                    animation-duration: 400ms;
                }
            }
        }
    }

    ////////////////
    // Post Modal //
    ////////////////    
    div.modal {
        .modal-body {
            @include border-radius(12px);
            width: 32%;
            padding: 0;
            min-width: 170px;

            button, label {
                margin: 0;
                width: 100%;
                padding: 13px 0;
                border: none;
                display: block;
                box-shadow: none;
                font-size: 0.79em;
                border-bottom: 1px solid rgba(var(--ce3,239,239,239),1);

                a, a:visited {
                    color: #41403E;
                    background-image: none;
                }
            }

            button.unfollow-button, button.delete-post {
                color: #A7342D;
            }

            label {
                text-align: center;
                cursor: pointer;
            }
        }
    }


    //////////////
    // Carousel //
    //////////////
    
    .carousel {
        ul li::before {
            content: "";
        }
        .slide {
            img, video {
                position: relative;
                left: 3.5px; // this fixes a visual bug that i dont know what causes                
            }
        }
    }


    /////////////////
    // ReactPlayer //
    /////////////////

    button.play-icon {
        position: absolute;
        left: 47%;
        top: 50%;
        z-index: 999;
        padding: 0;
        margin: 0;
        width: 64px;
        height: 64px;
        border: none;
        box-shadow: none;
        @include border-radius(100%);
        transform: translate(-50%, -50%);

        &.display-false {
            display: none;
        }
    };

}

